--- a/app/src/main/res/layout/include_checkout_form.xml
+++ b/app/src/main/res/layout/include_checkout_form.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -67,6 +68,13 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <Spinner
+            android:id="@+id/shipping"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/spacing_xxlarge"
+            android:layout_marginTop="@dimen/spacing_middle"
+            android:spinnerMode="dialog" />
         <android.support.design.widget.TextInputLayout
             android:id="@+id/address_lyt"
             android:layout_width="match_parent"
@@ -78,64 +86,31 @@
                 android:layout_height="wrap_content"
                 android:gravity="top|start"
                 android:hint="@string/hint_address"
-                android:lines="3"
+                android:lines="2"
                 android:maxLength="300"
                 android:maxLines="4"
                 android:minLines="3" />
 
         </android.support.design.widget.TextInputLayout>
+        <RadioGroup
+            android:id="@+id/radioDelivery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
 
-        <Spinner
-            android:id="@+id/shipping"
-            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/spacing_xxlarge"
-            android:layout_marginTop="@dimen/spacing_middle"
-            android:spinnerMode="dialog" />
+            <RadioButton
+                android:id="@+id/radioExpress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Express Delivery(30 min)"
+                android:checked="true" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spacing_large"
-            android:layout_marginTop="@dimen/spacing_large"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/spacing_medium"
-            android:paddingRight="@dimen/spacing_medium">
+            <RadioButton
+                android:id="@+id/radioNormal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Normal Delivery(3 hr)" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spacing_xxlarge"
-                android:gravity="center_vertical|start"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/date_shipping"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/hint_date_ship"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/grey_60" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <ImageButton
-                    android:id="@+id/bt_date_shipping"
-                    android:layout_width="@dimen/spacing_xxlarge"
-                    android:layout_height="@dimen/spacing_xxlarge"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_date"
-                    android:tint="@color/colorPrimary" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2px"
-                android:background="@color/grey_40" />
-        </LinearLayout>
+        </RadioGroup>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/comment_lyt"
