--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -27,8 +27,7 @@
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/grey_40">
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:layout_width="@dimen/product_item_img"
@@ -41,7 +40,8 @@
                         android:id="@+id/image"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop" />
+                        android:scaleType="centerCrop"
+                        android:background="@color/whiteOverlay"/>
 
                 </RelativeLayout>
 
