--- a/app/src/main/res/layout/dialog_product_details.xml
+++ b/app/src/main/res/layout/dialog_product_details.xml
@@ -17,28 +17,20 @@
         android:orientation="vertical">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/pager"
+            <com.balysv.materialripple.MaterialRippleLayout
+                style="@style/RippleStyleWhite"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:background="@color/grey_40" />
+                android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:id="@+id/layout_dots"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="@dimen/spacing_middle"
-                android:gravity="end|center_vertical"
-                android:orientation="horizontal" />
+                <ImageView
+                    android:id="@+id/image1"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp" />
+            </com.balysv.materialripple.MaterialRippleLayout>
 
         </RelativeLayout>
 
@@ -83,6 +75,7 @@
                 android:text="0 PKR"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/colorPrice"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <View
@@ -96,7 +89,8 @@
                 android:layout_height="wrap_content"
                 android:text="0 PKR"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
-                android:textColor="@color/grey_60" />
+                android:textColor="@color/grey_60"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
