--- a/app/src/main/res/layout/header_drawer.xml
+++ b/app/src/main/res/layout/header_drawer.xml
@@ -2,23 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/drawerHeaderColor"
+    android:background="@color/colorPrimary"
+    android:fitsSystemWindows="false"
     android:gravity="center"
     android:orientation="vertical"
-    android:fitsSystemWindows="false"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_centerInParent="true"
-        android:tint="@color/drawerHeaderIcon"
-        android:src="@drawable/main_logo" />
+        android:src="@drawable/main_logo"
+        android:tint="#00666666" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:src="@drawable/nav_header_bg"
-        android:scaleType="centerCrop"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#008BC34A"
+        android:scaleType="centerCrop" />
 
 </RelativeLayout>
