--- a/app/src/main/res/layout/activity_dialog_notification.xml
+++ b/app/src/main/res/layout/activity_dialog_notification.xml
@@ -160,7 +160,7 @@
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/OPEN"
+                android:text="@string/CONTINUE"
                 android:textColor="@color/colorPrimary" />
 
         </LinearLayout>
