--- a/app/src/main/res/layout/include_checkout_cost.xml
+++ b/app/src/main/res/layout/include_checkout_cost.xml
@@ -5,17 +5,6 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/spacing_medium">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/spacing_xxlarge"
-        android:layout_marginBottom="@dimen/spacing_medium"
-        android:gravity="center_vertical|start"
-        android:paddingLeft="@dimen/spacing_middle"
-        android:paddingRight="@dimen/spacing_middle"
-        android:text="@string/cost_details"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/grey_20" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +24,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/total_order"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/grey_80" />
+                android:textColor="@color/grey_80"
+                android:textSize="10sp" />
 
             <View
                 android:layout_width="0dp"
@@ -48,7 +38,8 @@
                 android:layout_height="wrap_content"
                 android:text="100.00 USD"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/colorPrice" />
+                android:textColor="@color/colorPrice"
+                android:textSize="10sp" />
 
         </LinearLayout>
 
@@ -65,7 +56,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tax"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/grey_80" />
+                android:textColor="@color/grey_80"
+                android:textSize="10sp" />
 
             <View
                 android:layout_width="0dp"
@@ -78,7 +70,39 @@
                 android:layout_height="wrap_content"
                 android:text="10.00 USD"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/colorPrice" />
+                android:textColor="@color/colorPrice"
+                android:textSize="10sp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:minHeight="@dimen/spacing_large"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/deliveryCharge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delivery Charges :"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/grey_80"
+                android:textSize="10sp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/price_Dcharges"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10.00 USD"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/colorPrice"
+                android:textSize="10sp" />
 
         </LinearLayout>
 
@@ -115,6 +139,7 @@
                 android:text="@string/total_fess"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/grey_80"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <View
@@ -129,6 +154,7 @@
                 android:text="110.00 USD"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/colorPrice"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
