--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -32,24 +32,6 @@
             android:paddingBottom="@dimen/spacing_medium"
             android:paddingTop="@dimen/spacing_medium">
 
-            <!--header total payment layout-->
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_medium"
-                android:layout_marginLeft="@dimen/spacing_middle"
-                android:layout_marginRight="@dimen/spacing_middle"
-                android:layout_marginTop="@dimen/spacing_medium"
-                android:clipToPadding="false"
-                app:cardBackgroundColor="@android:color/white"
-                app:cardCornerRadius="@dimen/card_radius"
-                app:cardElevation="@dimen/card_elevation"
-                app:cardUseCompatPadding="false">
-
-                <include layout="@layout/include_checkout_cost" />
-
-            </android.support.v7.widget.CardView>
-
             <!--form profile layout-->
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -90,6 +72,28 @@
 
     </android.support.v4.widget.NestedScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/spacing_medium"
+        android:paddingTop="@dimen/spacing_medium">
+
+        <!--header total payment layout-->
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="@dimen/card_radius"
+            app:cardElevation="@dimen/card_elevation"
+            app:cardUseCompatPadding="false">
+
+            <include layout="@layout/include_checkout_cost" />
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
     <com.balysv.materialripple.MaterialRippleLayout
         android:id="@+id/lyt_add_cart"
         style="@style/RippleStyleBlack"
