--- a/app/src/main/res/layout/include_checkout_cost.xml
+++ b/app/src/main/res/layout/include_checkout_cost.xml
@@ -2,19 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/spacing_medium">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/spacing_xxlarge"
-        android:layout_marginBottom="@dimen/spacing_medium"
-        android:gravity="center_vertical|start"
-        android:paddingLeft="@dimen/spacing_middle"
-        android:paddingRight="@dimen/spacing_middle"
-        android:text="@string/cost_details"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/grey_20" />
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
