--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
 
     <color name="colorWarning">#FF7043</color>
     <color name="colorInfo">#5DBA60</color>
+    <color name="netTotal">#70df74</color>
 
     <color name="darkOverlay">#80000000</color>
     <color name="darkOverlaySoft">#40000000</color>
